# gauss

./: .gitignore  CMakeLists.txt  Fail.cpp  README.md  a.txt  benchmark.sh  copy10.cpp  run.sh
Result/: help.txt  loginterface.txt
config/: config.conf
config/commands/: commandsGauss.cmd  commandsRead.cmd  commmandsAuto.cmd  graph.cmd  grid.cmd  kill.cmd  pathCommands.cmd  project1.cmd  rrt.cmd  test1.cmd  test2.cmd  test3.cmd  test4.cmd  test5.cmd
docs/: DeveloperGuide.md  UserGuide.md  WIP.md
notebooks/: graph.ipynb  grid.ipynb  pathCommands.ipynb  project1.ipynb  rrt.ipynb
results/: help.txt
results/docs/: help.txt  logcontrol.txt  loginterface.txt
src/: CMakeLists.txt  auto.sh  commands.txt  commandsGauss.txt  commandsRead.txt  config.txt  copy11.cpp  copy12.cpp  copy13.cpp  copy14.cpp  copy15.cpp  terrain_navigator
src/algorithms/: CMakeLists.txt  Component.hpp  ComponentCalculator.hpp  Copier.hpp  GaussBuilder.hpp  KMeans.hpp  PathFinder.hpp  TerrainGrid.hpp  Triangulator.hpp  VoronoiDiagram.hpp
src/algorithms/components/: CMakeLists.txt  binary.cpp  binary.hpp  cluster_service.cpp  cluster_service.hpp  components_analysis.cpp  components_analysis.hpp  copier_service.cpp  copier_service.hpp  find_components.cpp  find_components.hpp  kmeans.cpp  kmeans.hpp
src/algorithms/gauss/: CMakeLists.txt  gauss_builder.cpp  gauss_builder.hpp  pole.cpp  pole.hpp
src/algorithms/geometry/: CMakeLists.txt  bresenham_line.cpp  bresenham_line.hpp  geometry_structures.hpp  math.cpp  math.hpp  triangulator.cpp  triangulator.hpp  voronoi_diagram.cpp  voronoi_diagram.hpp
src/algorithms/geometry/spatial/: kd_tree.hpp  kd_tree_index.hpp
src/algorithms/kinematics/: CMakeLists.txt  incline_angle.cpp  incline_angle.hpp
src/algorithms/path/: CMakeLists.txt
src/algorithms/path/a_star/: CMakeLists.txt  conditions.cpp  conditions.hpp  graph.cpp  graph.hpp  heuristics.cpp  heuristics.hpp  path_finder.cpp  path_finder.hpp
src/algorithms/path/common/: CMakeLists.txt  collision.cpp  collision.hpp  conditions.cpp  conditions.hpp  graph.cpp  graph.hpp  grid.cpp  grid.hpp  heuristics.cpp  heuristics.hpp  path_metrics.hpp  path_validator.cpp  path_validator.hpp
src/algorithms/path/dekstra/: CMakeLists.txt  path_finder.cpp  path_finder.hpp
src/algorithms/path/greedy/: CMakeLists.txt  path_finder.cpp  path_finder.hpp
src/algorithms/path/rrt/: CMakeLists.txt  rrt.cpp  rrt.hpp
src/algorithms/path/rrt_star/: CMakeLists.txt  rrt_star.cpp  rrt_star.hpp
src/algorithms/path/smoothing/: CMakeLists.txt  shortcut.cpp  shortcut.hpp  spline.cpp  spline.hpp
src/app/: main.cpp
src/command/: CMakeLists.txt  Control.hpp  DispatcherParams.hpp  Interface.hpp  application_state.hpp  control.cpp  control.hpp  dispatcher_params.hpp  interface.cpp  interface.hpp  validator.cpp  validator.hpp
src/core/: CMakeLists.txt  Config.hpp  Constants.hpp  Geometry.hpp  Logger.hpp  config.cpp  config.hpp  constants.hpp  logger.cpp  logger.hpp
src/io/: BmpHandler.hpp  CMakeLists.txt  bmp_handler.cpp  bmp_handler.hpp
src/services/: ClusterService.hpp  ColorGenerator.hpp  Geometry.hpp  Pole.hpp
src/statistics/: CMakeLists.txt  csv_writer.cpp  csv_writer.hpp  statistics_manager.cpp  statistics_manager.hpp
src/utils/: ColorGenerator.hpp  hash.hpp
src/visualization/: CMakeLists.txt  GnuplotInterface.hpp  color.cpp  color.hpp  gnuplot.cpp  gnuplot.hpp
